--- a/roadworks.html
+++ b/roadworks.html
@@ -95,6 +95,17 @@
         }
     </style>
 </head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YX11BLFGMV"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-YX11BLFGMV');
+</script>
+
 <body>
 
     <h1>DFD Crossing Expected Roadworks</h1>
