--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <script>
         // URL of the JSON data
-        const jsonUrl = 'https://crossingwatch.co.uk/data/output.json'; // Replace with your actual JSON URL or local path
+        const jsonUrl = 'https://source.crossingwatch.co.uk/data/output.json'; // Replace with your actual JSON URL or local path
 
         // Function to fetch and display roadworks data
         async function loadAndDisplayRoadworks() {
