--- a/index.html
+++ b/index.html
@@ -2,98 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Up to date scheduled roadworks for the A282, Dartford Crossing">
+    <meta name="keywords" content="M25, A282, Dartford Crossing, A282 Roadworks, Dartford Crossing Roadworks, A282 Closures, M25 Closures">
+    <meta name="author" content="CrossingWatch">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="src/global.css">
     <title>DFD Crossing Expected Roadworks</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 2%;
-        }
-        h1 {
-            text-align: center;
-        }
-        .roadwork {
-            border: 1px solid #ccc;
-            padding: 10px;
-            margin-bottom: 20px;
-            border-radius: 8px;
-            background-color: #f9f9f9;
-        }
-        .roadwork h2 {
-            margin-top: 0;
-        }
-        .severity {
-            font-weight: bold;
-            color: white;
-            padding: 5px 10px;
-            border-radius: 5px;
-        }
-        .severity-low {
-            background-color: green;
-        }
-        .severity-medium {
-            background-color: orange;
-        }
-        .severity-high {
-            background-color: red;
-        }
-        .lane-closures {
-            display: flex;
-            margin-top: 10px;
-        }
-        .lane {
-            width: 20px;
-            height: 20px;
-            margin-right: 5px;
-            border-radius: 4px;
-            display: inline-block;
-            text-align: center;
-            line-height: 20px;
-            color: white;
-            font-size: 14px;
-        }
-        .lane-closed {
-            background-color: red;
-        }
-        .lane-open {
-            background-color: green;
-        }
-        .lane-unknown {
-            background-color: grey;
-        }
-        .events {
-            margin-top: 10px;
-        }
-        .events ul {
-            margin: 0;
-            padding-left: 20px;
-        }
-        /* Footer styling */
-        .footer {
-            color: #000000;
-            text-align: center;
-            padding: 20px 0;
-            position: relative;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .footer-content {
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .footer a {
-            color: #000000;
-            text-decoration: none;
-            margin: 0 10px;
-        }
-
-        .footer a:hover {
-            text-decoration: underline;
-        }
-    </style>
 </head>
 
 <!-- Google tag (gtag.js) -->
@@ -107,8 +21,17 @@
 </script>
 
 <body>
-
-    <h1>DFD Crossing Expected Roadworks</h1>
+    <header>
+        <!-- <script>
+            window.addEventListener('load', () => {
+        fetch('https://crossingwatch.co.uk/src/footer.html')
+            .then(res => res.text())
+            .then(html => document.querySelector('header').innerHTML = html)
+            .catch(err => console.error('Failed to load footer:', err));
+        });
+    </script> -->
+    <h1>Crossing Watch</h1>
+    </header>
 
     <div id="roadworks-container"></div>
 
@@ -219,15 +142,14 @@
 </body>
 
 <footer class="footer">
-    <div class="footer-content">
-        <p>&copy; 2024 Your Company Name. All rights reserved.</p>
-        <p>
-            <a href="/privacy-policy">Privacy Policy</a> |
-            <a href="/terms-of-service">Terms of Service</a> |
-            <a href="/contact">Contact Us</a>
-        </p>
-        <p>Verify information with a secondary source.</p>
-    </div>
+    <script>
+            window.addEventListener('load', () => {
+        fetch('https://crossingwatch.co.uk/src/footer.html')
+            .then(res => res.text())
+            .then(html => document.querySelector('footer').innerHTML = html)
+            .catch(err => console.error('Failed to load footer:', err));
+        });
+    </script>
 </footer>
 
 </html>
