--- a/src/footer.html
+++ b/src/footer.html
@@ -1,5 +1,5 @@
 <div class="footer-content">
-    <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+    <p>&copy; 2024 Crossing Watch. All rights reserved.</p>
     <p>
         <a href="/privacy-policy">Privacy Policy</a> |
         <a href="/terms-of-service">Terms of Service</a> |
