--- a/index.html
+++ b/index.html
@@ -22,6 +22,16 @@
 
 <body>
     <header>
+        <div class="notification-banner notification-warning">
+            ⚠️ This website is currently under construction.
+            <button class="close-btn" onclick="this.parentElement.style.display='none';">×</button>
+        </div>
+        
+        <div class="notification-banner notification-severe">
+            🚨 (TEST BANNER) Severe delays due to an accident. Expect long wait times.
+            <button class="close-btn" onclick="this.parentElement.style.display='none';">×</button>
+        </div>
+        
         <!-- <script>
             window.addEventListener('load', () => {
         fetch('https://crossingwatch.co.uk/src/footer.html')
