--- a/src/footer.html
+++ b/src/footer.html
@@ -2,12 +2,16 @@
     <p>&copy; 2024 Crossing Watch. All rights reserved.</p>
     <p>
         <a href="/privacy">Privacy Policy</a> |
+        <a href="https://forms.gle/LAR4BcS29rdep6y78">Report a Problem</a> |
         <a href="mailto:hello@crossingwatch.co.uk">Contact Us</a>
     </p>
     <p>Verify information with a secondary source.</p>
     <p>
         <svg xmlns="http://www.w3.org/2000/svg" fill="#000000" width="30px" viewBox="0 0 24 24">
         <path d="M12 2.03998C6.5 2.03998 2 6.52998 2 12.06C2 17.06 5.66 21.21 10.44 21.96V14.96H7.9V12.06H10.44V9.84998C10.44 7.33998 11.93 5.95998 14.22 5.95998C15.31 5.95998 16.45 6.14998 16.45 6.14998V8.61998H15.19C13.95 8.61998 13.56 9.38998 13.56 10.18V12.06H16.34L15.89 14.96H13.56V21.96C15.9164 21.5878 18.0622 20.3855 19.6099 18.57C21.1576 16.7546 22.0054 14.4456 22 12.06C22 6.52998 17.5 2.03998 12 2.03998Z"/>
+        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="24px" fill="#000000">
+            <path d="M80-513v-83q99-24 198.5-34T480-640q102 0 201.5 10T880-596v83q-20-5-40-9l-40-8v130h-80v-144q-60-8-120-12t-120-4q-60 0-120 3.5T240-545v145h-80v-131q-20 4-40 8.5T80-513Zm160 393 58-351q18-2 41-3.5t41-2.5l-60 357h-80Zm120-720h80l-20 119q-18 1-40.5 2.5T339-715l21-125Zm80 720h80v-160h-80v160Zm0-240h80v-119h-80v119Zm80-480h80l21 125q-18-1-40.5-3t-40.5-3l-20-119Zm120 720-60-357q18 1 41 3t41 4l58 350h-80Z"/>
         </svg>
     </p>
 </div>
