--- a/src/header.html
+++ b/src/header.html
@@ -5,8 +5,8 @@
     </svg>
 </h1>
 <nav class="navbar">
-    <a href="#home">Home</a>
-    <a href="#roadworks">Roadworks</a>
-    <a href="#live-updates">Live Updates</a>
-    <a href="#contact">Contact</a>
+    <a href="/">Home</a>
+    <a href="/">Roadworks</a>
+    <a href="/live">Live Traffic</a>
+    <a href="mailto:hello@crossingwatch.co.uk">Contact</a>
 </nav>
