--- a/src/header.html
+++ b/src/header.html
@@ -7,8 +7,7 @@
     </a>
 </h1>
 <nav class="navbar">
-    <a href="/">Home</a>
+    <a href="/">Live Traffi</a>
     <a href="/">Roadworks</a>
-    <a href="/live">Live Traffic</a>
     <a href="mailto:hello@crossingwatch.co.uk">Contact</a>
 </nav>
